--- a/public/todo.txt
+++ b/public/todo.txt
@@ -9,4 +9,4 @@ To do:
 8) filter question list output by page, topic, etc.
 9) list #of pages having each topic in topic view - done 7/11/14
 10) facility to upload files
-11)
+11) answer graphs to be added - 15.5, 16.2, 16.4
