--- a/public/todo.txt
+++ b/public/todo.txt
@@ -8,5 +8,9 @@ To do:
 7) save question goes to list rather than show
 8) filter question list output by page, topic, etc.
 9) list #of pages having each topic in topic view - done 7/11/14
-10) facility to upload files
-11) answer graphs to be added - 15.5, 16.2, 16.4
+10) facility to upload files = 7/14/14
+11) show # of files uploaded
+12) add difficulty rating
+
+
+answer graphs to be added - 15.5, 16.2, 16.4, 18.1
