--- a/public/todo.txt
+++ b/public/todo.txt
@@ -4,7 +4,7 @@ To do:
 3) twitter bootstrap - begun 7/11/14
 4) devise
 5) monospaced font in show question
-6) default question and page number for new questions
+6) default question and page number for new questions 7/20/14
 7) save question goes to list rather than show
 8) filter question list output by page, topic, etc.
 9) list #of pages having each topic in topic view - done 7/11/14
@@ -13,6 +13,7 @@ To do:
 12) ability to dispaly full image instead of thumbnail
 13) add difficulty rating
 14) add search function in menu bar
+15) button to remove graphic 
 
 
 answer graphs to be added - 15.5, 16.2, 16.4, 18.1
