--- a/public/todo.txt
+++ b/public/todo.txt
@@ -4,16 +4,16 @@ To do:
 3) twitter bootstrap - begun 7/11/14
 4) devise
 5) monospaced font in show question
-6) default question and page number for new questions 7/20/14
+6) default question and page number for new questions - done 7/20/14
 7) save question goes to list rather than show
 8) filter question list output by page, topic, etc.
 9) list #of pages having each topic in topic view - done 7/11/14
-10) facility to upload files = 7/14/14
-11) show # of files uploaded
+10) facility to upload files - done 7/14/14
+11) show # of files uploaded -done 7/23/14
 12) ability to dispaly full image instead of thumbnail
 13) add difficulty rating
 14) add search function in menu bar
-15) button to remove graphic 
+15) button to remove graphic - done 7/23/14
 
 
-answer graphs to be added - 15.5, 16.2, 16.4, 18.1
+answer graphs to be added - 16.2, 16.4, 18.1
