--- a/public/todo.txt
+++ b/public/todo.txt
@@ -2,7 +2,7 @@ To do:
 1) commas between topic output in show view - done 7/13/2014
 2) date created and date modified in show view - done 7/13/2014
 3) twitter bootstrap - begun 7/11/14
-4) devise
+4) devise - basuc setup 7/24/14
 5) monospaced font in show question
 6) default question and page number for new questions - done 7/20/14
 7) save question goes to list rather than show
@@ -14,6 +14,7 @@ To do:
 13) add difficulty rating
 14) add search function in menu bar
 15) button to remove graphic - done 7/23/14
+16) devise hide answers if not signed in
 
 
 answer graphs to be added - 16.2, 16.4, 18.1
