basic ransack implemented

--- a/public/todo.txt
+++ b/public/todo.txt
@@ -18,3 +18,11 @@ To do:
 
 
 answer graphs to be added - 16.2, 16.4, 18.1
+
+<% search_form_for @q do |f| %>
+  <div class="field">
+    <%= f.label :page_cont, "Page" %>
+    <%= f.text_field :page_cont %>
+  </div>
+  <div class="acttions"><%= f.submit "By Page" %></div>
+<% end %>
