--- a/public/todo.txt
+++ b/public/todo.txt
@@ -1,17 +1,18 @@
 To do:
 
 7) save question goes to list rather than show
-12) ability to display full image instead of thumbnail - done
-13) add difficulty rating
+13) add difficulty rating to question
 18) add a 'links to questions' field holding an array
 20) clean up bootstrap css files - Joe
-21) add sorting id field that is calculated from page and num
-22) hide image display when no image - done
 23) rspec test suite
-24) put show/answer into a bordered box ?
 26) admin can manage users
-27) add level (which course)
 28) put signin info in navbar - Joe
+29) add models for class and student - class has students
+30) add search line for topics
+31) list of questions containing topic
+32) add search page for questions
+33) full featured multi part search within questions
+34) add subtopics to topics
 
 Done:
 1) commas between topic output in show view - done 7/13/2014
@@ -30,7 +31,11 @@ Done:
 17) devise security - admin, teacher full view - guests, students limited view - done 7/31/14
 19) add teacher role to devise - done 8/1/14
 25) flash messages don't work - fixed 8/3/14
-
+12) ability to display full image instead of thumbnail - done
+21) add sorting id field that is calculated from page and num - done
+22) hide image display when no image - done
+24) put show/answer into a bordered box - done
+27) add level (which course) - done
 
 
 answer graphs to be added - 16.2, 16.4, 18.1
